Closed Bug 195800 Opened 21 years ago Closed 21 years ago

core editor should not add stylesheets

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: Brade, Assigned: glazou)

Details

(Keywords: crash, topembed)

Attachments

(1 file)

nsHTMLEditor.cpp currently adds stylesheets but it should not.
This code was not intended to land on the trunk.
Attached patch patch #1Splinter Review
absolutely... sorry for that. This should be removed ASAP.
embeddors report crashes linked to this bug
Severity: normal → critical
Status: NEW → ASSIGNED
Keywords: crash, topembed
Priority: -- → P1
Target Milestone: --- → mozilla1.4alpha
Comment on attachment 116138 [details] [diff] [review]
patch #1

r=brade
Attachment #116138 - Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
did an lxr search for AddOverrideStyleSheet (strangely, lxr didn't get hits
there, so had to use "OverrideStyleSheet", but i digress), and it cropped only
in two files (non-core):

editor/libeditor/html/nsHTMLEditor.h
editor/libeditor/html/nsHTMLEditor.cpp

thanks to kathy for the lxr tips. marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: