remove a few lines of code that landed by mistake and cause trouble with embedded editor; b=195800, r=brade; sr=dbaron